This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.

Add Dutch translation (Thanks @Engelbert!)
Add new "Template Variables" tab to component. (Thanks Adam!)
Prevent E_NOTICE errors on main controller.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev12     ++
++   Released on 2012-04-03   ++
++++++++++++++++++++++++++++++++
Add new "Versions" tab to Templates panel.
Normalize/refactor process of adding tabs to non-component panels through the plugin. 
Add Templates tab to VersionX component. (Thanks Adam!)
Fix filtering on Resource panel. (Thanks Adam!)

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev11     ++
++   Released on 2012-01-22   ++
++++++++++++++++++++++++++++++++
Fix/re-introduce support for PHP 5.2

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev10     ++
++   Released on 2012-01-21   ++
++++++++++++++++++++++++++++++++
Fix linking from/to components, including when comparing.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev9      ++
++   Released on 2012-01-21   ++
++++++++++++++++++++++++++++++++
Add settings to setup for debug and showing/hiding the resource versions tab.
Add tab on resource panel for versions.
#5 Make sure changes were made before creating a new version, normalized and now also for all element types.
#1 Add ability to create a snapshot of all resources and elements during install.
#2 Added TV compatibility for 2.0.8. 

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev8      ++
++   Released on 2012-01-20   ++
++   Contributors:            ++
++   - Adam Lundrigan         ++
++++++++++++++++++++++++++++++++
Make pretty for MODX 2.2 (yes, that means it's yucky-ish in 2.1, but it's super in 2.2!)
#10 Fix bug in Google Chrome (Thanks Adam!)

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev7      ++
++   Released on 2011-11-25   ++
++++++++++++++++++++++++++++++++